--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -38,9 +38,9 @@
    "contact":{
       "btn":"Submit",
       "comments":"Comments",
-      "title":"Contact Yalku Tours Riviera Maya - We can’t wait to hear from you!",
+      "title":"We want to hear from you!",
 
-      "text":"<p class=\"paragraph-general\">Contact the experts at Yalku Tours Riviera Maya</p><p class=\"paragraph-general\">We are delighted that you would like to experience our tours from Cancun and the Riviera Maya! Explore Mayan ruins, natural reserves, theme parks and more with us. Contact us and tell us about yourself and your trip and we will help you choose the best adventures for you and travel partners.</p> <p class=\"paragraph-general\">Toll Free USA/CA: + 1 (888) 257-3065</p><p class=\"paragraph-general\">From México: (984) 242-0048</p><p class=\"paragraph-general\">Email: info@yalku.tours</p>"
+      "text":"<p class=\"paragraph-general\">Contact us to receive information about our tours, answers to your questions and so we can help you have an unforgettable vacation in Cancun and the Riviera Maya. Follow us on our social networks and if you have already done a tour with us, tell us about your experience. We love knowing that you had a great adventure!</p><p class=\"paragraph-general\">Toll Free USA/CA: +1(888) 257-5547</p><p class=\"paragraph-general\">From México: 01(984)242-0070</p><p class=\"paragraph-general\">Email: websales@cancunbay.com</p>"
    },
    "forms":{
       "info":{
@@ -89,9 +89,11 @@
    "home":{
       "title1":"Cancun and Riviera Maya Tours from the Experts at Yalku Tours",
       "subtitle1":"",
-      "paragraph1":"The Mexican Caribbean is your portal to another world of natural beauty, ancient history and big adventures in the jungle and sea. We’ve selected the best Cancun and Riviera Maya tours for exclusive and unique experiences that will make your vacation absolutely unforgettable. Stunning beaches, fascinating Mayan ruins, mysterious cenotes or adrenaline-fueled extreme fun, the best things to do in the Riviera Maya are waiting for you!",
-      "subtitle2":"Exclusive Cancun and Riviera Maya tours in small groups with expert guides from Yalku Tours",
-      "paragraph2":"Looking for the best Riviera Maya activities? Look no further, Yalku Tours has all you need for epic Riviera Maya adventures and Mayan ruins tours. We LOVE our home in the Riviera Maya and cannot wait to show you around, there is just so much to see and we have it all for you. Our expert guides are passionate about nature and the history and culture of the ancient Maya. Discover the legacy of the Mayan world, snorkel the reefs, explore the jungles and so much more. Our VIP Cancun and Riviera Maya tours in small groups put you at the heart of the action for unique experiences and sensational immersions in magic.",
+      "paragraph1":"Welcome to the Mexican Caribbean! You are about to discover a spectacular paradise and you deserve to enjoy it in a big way. The perfect way to get to know the most visited beach destination in Latin America is with our best Cancun and Riviera Maya tours.ancun Bay brings you a carefully curated selection of unforgettable experiences to make your visit to Cancun and the Riviera Maya memorable. ",
+      "subtitle2":"Unforgettable experiences",
+      "paragraph2":"We want your visit to be so spectacular that you simply must return as soon as possible. You will find adventure tours, different aquatic activities and you can explore the spectacular Mayan ruins sites of the region.",
+      "subtitle3":"Destination Experts",
+      "paragraph3":"We are experts in the destination. Cancun and the Riviera Maya have hundreds of sites to visit and tours to do, however, we bring you only the best experiences and activities after years of getting to know the Mexican Caribbean and curating the different tours that are available. You will find activities for the whole family and for the most daring travelers.",
       "icons":{
          "tours":"Tour Experiences",
          "guides":"Certified Guides",
