--- a/frontend/locales/es.json
+++ b/frontend/locales/es.json
@@ -153,7 +153,10 @@
       "recommendations":"Recomendaciones",
       "notes":"Notas",
       "description":"Descripción",
-      "not_included":"No Incluido"
+      "not_included":"No Incluido",
+      "languages":"Español / Ingles",
+      "digitalBoucher":"Voucher Digital",
+      "transportation":"Transportación"
    },
    "checkout":{
       "steps":{
