--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -69,7 +69,7 @@
          "emailValidation2":"Tye a valid email",
          "phoneField":"Phone number *",
          "phoneValidation":"Phone number is requiered",
-         "hotelField":"Pick Up",
+         "hotelField":"Hotel name",
          "hotelValidation":"Hotel is requiered",
          "promoCodeField":"Promo Code",
          "btnPromo":"Apply",
@@ -77,7 +77,8 @@
          "validPromoCode":"Type a valid Promo code",
          "country":"Country",
          "state": "State",
-         "city": "City"
+         "city": "City",
+         "alertHotel":"If you are staying in an Airbnb, hostel, with family or anywhere, please contact us."
 
       },
       "payment":{
