correcion de promocode en private

--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -25,9 +25,9 @@
       }
    },
    "about":{
-      "title": "About us",
+      "title": "About Us: Cancun Bay Tours",
       "subTitle":"",
-      "content":"<p class=\"paragraph-general\">We are a tour operator in the Riviera Maya that wants to show you our home where we have fun, explore the best places in the Mexican Caribbean and bring you the best tours at an excellent price.</p><p class=\"paragraph-general\">Our team has years of experience in the destination and we have done the same tours that you will be enjoying. We visit parks, snorkel, swim with dolphins and much more to ensure that we bring you only the best experiences.</p> <p class=\"paragraph-general\">We are experts in Cancun and the Riviera Maya, we love to share our love for the natural wonders and attractions. Choose the best tours of the Mexican Caribbean, carefully selected for a great vacation, the only thing missing is you!</p>"
+      "content":"<p class=\"paragraph-general\">Welcome to Cancun Bay Tours! We're your friendly tour operator in the Riviera Maya, and our goal is simple: to show you a good time, explore the coolest spots in the Mexican Caribbean, and give you top-notch tours without breaking the bank.</p><p class=\"paragraph-general\">Our team knows this place like the back of our hands. We've been on the same tours we're offering you, so rest assured, we've vetted them for maximum fun. We are locals with decades of on the ground experience curating the best Cancun and Riviera Maya experiences. We're all about hitting up parks, going snorkeling, having a blast swimming with dolphins, and more. Basically, we're all in to make sure you're all in for an amazing time.</p><h2>We Love Our Home: Cancun Bay Tours is Passionate About the Riviera Maya</h2><p class=\"paragraph-general\">Cancun and the Riviera Maya? Yeah, we know our stuff. We love these places and their natural wonders. From the coolest attractions to the secret gems, we're here to spill all the beans. We've handpicked the best tours that'll make your Mexican Caribbean vacation truly unforgettable. And guess what? The only thing missing to complete the picture is you!</p><p class=\"paragraph-general\">Get ready to explore stunning Riviera Maya theme parks, dive into those crystal-clear waters for some snorkeling action, and feel the rush of hanging out with dolphins. We're all about making these experiences the highlights of your trip.</p><p class=\"paragraph-general\">You're not just a customer to us – you're a fellow adventurer. We want to show you the time of your life in Cancun and the Riviera Maya. Whether it's the jungle adventures, the mind-blowing ruins, or incomparable underwater excursions, we're here to make it all accessible and awesome.</p><h3>Only the Best: Curated Experiences by Cancun Bay Tours</h3><p class=\"paragraph-general\">So, if you're ready to explore the Mayan world, fulfil your need for speed and adrenaline, and have stories to tell for years, Cancun Bay Tours is here to make it all happen. The Mexican Caribbean is calling, and we've got the answer to an epic vacation. This is our home and we’ve got years of experience exploring and curating only the best Cancun and Riviera Maya tours. Let's do this!</p>"
 
 
    },
@@ -55,9 +55,9 @@
    "contact":{
       "btn":"Submit",
       "comments":"Comments",
-      "title":"We want to hear from you!",
+      "title":"Cancun Bay Contact Us: We’re Listening",
 
-      "text":"<p class=\"paragraph-general\">Contact us to receive information about our tours, answers to your questions and so we can help you have an unforgettable vacation in Cancun and the Riviera Maya. Follow us on our social networks and if you have already done a tour with us, tell us about your experience. We love knowing that you had a great adventure!</p><p class=\"paragraph-general\">Toll Free USA/CA: +1(888) 257-5547</p><p class=\"paragraph-general\">From México: 01(984)242-0070</p><p class=\"paragraph-general\">Email: websales@cancunbay.com</p>"
+      "text":"<p class=\"paragraph-general\">We're all ears! Feel free to get in touch for info about our Cancun and Riviera Maya tours, answers to your questions, and making your vacation truly memorable. Stay updated by following us on social media. If you've already taken a tour with us, don't hold back - share your experience. We love hearing about the exciting stories you have!</p><p class=\"paragraph-general\">Toll Free USA/CA: +1(888) 257-5547</p><p class=\"paragraph-general\">From México: 01(984)242-0070</p><p class=\"paragraph-general\">Email: websales@cancunbay.com</p><p class=\"paragraph-general\">You're welcome to use any of the provided ways to reach out. Our team is here to assist with any queries, offer insights into our tours, and help you plan your trip just the way you want it.</p><h2>So many things to do in Cancun and the Riviera Maya, help!</h2><p class=\"paragraph-general\">We’ve got you, contact us for guidance in navigating through all the exceptional experiences available for the intrepid traveler. Your vacation is important, and we're here to make it count. Whether you're new to traveling or a seasoned explorer, Cancun Bay Tours is here to make your time in Cancun and the Riviera Maya special. </p><p class=\"paragraph-general\">We understand that everyone travels differently, and our goal is to make your experience unique and tailored to you. We know that there are a whole lot of choices for adventures and it's tough to choose, contact us at Cancun Bay today and let us guide you!</p><p class=\"paragraph-general\">At Cancun Bay Tours, we're not just about travel - we're about creating memories. From thrilling jungle adventures to relaxed getaways in the Mayan world and culture, we have the knowledge and boots on the ground experience to make your vacation dreams a reality. Reach out to us today, and let's get started on planning your perfect Cancun and Riviera Maya getaway, together!</p>"
    },
    "forms":{
       "info":{
@@ -113,11 +113,11 @@
    "home":{
       "title1":"Cancun and Riviera Maya Tours from the Experts ",
       "subtitle1":"",
-      "paragraph1":"Welcome to the Mexican Caribbean! You are about to discover a spectacular paradise and you deserve to enjoy it in a big way. The perfect way to get to know the most visited beach destination in Latin America is with our best Cancun and Riviera Maya tours. Cancun Bay brings you a carefully curated selection of unforgettable experiences to make your visit to Cancun and the Riviera Maya memorable. ",
+      "paragraph1":"Welcome to the stunning Mexican Caribbean! Get ready to explore this amazing paradise in a big way with our Cancun and Riviera Maya tours. At Cancun Bay, we've handpicked the best experiences to make your visit unforgettable. ",
       "subtitle2":"Unforgettable experiences",
-      "paragraph2":"We want your visit to be so spectacular that you simply must return as soon as possible. You will find adventure tours, different aquatic activities and you can explore the spectacular Mayan ruins sites of the region.",
+      "paragraph2":"Our goal is to give you such a fantastic time that you'll want to come back soon. We offer a range of adventure tours and water activities, along with the chance to explore the incredible Mayan ruins in the area.",
       "subtitle3":"Destination Experts",
-      "paragraph3":"We are experts in the destination. Cancun and the Riviera Maya have hundreds of sites to visit and tours to do, however, we bring you only the best experiences and activities after years of getting to know the Mexican Caribbean and curating the different tours that are available. You will find activities for the whole family and for the most daring travelers.",
+      "paragraph3":"<p class=\"paragraph-general\">We're experts when it comes to this destination. There are so many things to see and do in Cancun and Riviera Maya, but we've done the hard work of selecting the absolute best experiences after years of getting to know the Mexican Caribbean. Whether you're traveling with family or you're an adventurous solo traveler, we have activities for everyone.</p><p class=\"paragraph-general\" >Imagine taking exciting off-road trips through lush jungles, snorkeling in crystal-clear cenotes, or trying out thrilling water sports. These Cancun and Riviera Maya tours are designed to make your trip extraordinary.</p><p class=\"paragraph-general\" >The Mayan ruins are also an absolute must-see. You can explore the remains of an ancient civilization and feel history come alive as you walk through incredible sites like the iconic Chichen Itza, the seaside ruins of Tulum and the jungle magic of Coba.</p><h3>The Cancun Bay Difference: Top Cancun and Riviera Maya Tours with a Passion for the Destination</h3><p class=\"paragraph-general\" >What sets us apart is our deep connection to the destination. We know Cancun and Riviera Maya inside out, and we've carefully selected only the top-notch experiences for you. Our years of exploring the Mexican Caribbean have given us insights and connections that we're excited to share with the world.</p><p class=\"paragraph-general\" >Whether you're traveling with your family, on a romantic getaway, or exploring on your own, we have activities that will rock your world. Watch your kids' wide-eyed excitement as they explore XelHa Park, snorkel the reef, or zipline over the jungle canopy for an adrenaline rush – we've got it all.</p><p class=\"paragraph-general\" >In a nutshell, our Cancun and Riviera Maya tours offer you the best way to experience this beautiful destination. We're not just offering tours; we're offering experiences that will make your trip unforgettable. Let Cancun Bay be your guide to the Mexican Caribbean, where every moment is filled with wonder and every experience is one for the books.</p>",
       "icons":{
          "tours":"Tour Experiences",
          "guides":"Certified Guides",
@@ -175,14 +175,14 @@
    },
    "meta":{
       "home":{
-         "title":"Tours and Excursions in Cancun and Riviera Maya | Cancun Bay Tours",
-         "keywords":"",
-         "description":"Cancun Bay Tours brings you a careful selection of unforgettable tours and excursions to make your visit to Cancun and the Riviera Maya memorable."
+         "title":"Cancun and Riviera Maya Tours: Cancun Bay",
+         "keywords":"cancun and riviera maya tours",
+         "description":"Discover unforgettable tours in Cancun and the Riviera Maya. Immerse yourself in thrilling adventures, ancient history, and the vibrant culture of the Mexican Caribbean. Book now with Cancun Bay for all the excitement you can handle!"
       },
       "about-us":{
-         "title":"About us | Cancun Bay Tours",
-         "keywords":"",
-         "description":""
+         "title":"Cancun Bay Tours: About Us",
+         "keywords":"cancun bay tours",
+         "description":"All of us at Cancun Bay Tours are in love with adventure! We offer decades of experience and bring you only the best Cancun and Riviera Maya tours that we know will rock your world on your Mexican Caribbean vacation. "
       },
       "politics":{
          "title":"Privacy Policy | Cancun Bay Tours",
@@ -195,9 +195,9 @@
          "description":""
       },
       "contact":{
-         "title":"Contact | Cancun Bay Tours ",
-         "keywords":"",
-         "description":""
+         "title":"Cancun Bay Tours: Contact Us",
+         "keywords":"cancun bay tours contact us",
+         "description":"We want to hear from you! Contact us at Cancun Bay Tours today with all your Cancun and Riviera Maya questions or to share your experience with us. We will guide you in choosing the best tour for you to reserve today!"
       }
    }
 
