--- a/frontend/locales/es.json
+++ b/frontend/locales/es.json
@@ -29,7 +29,7 @@
       "comments":"Comentarios",
       "title":"¡Queremos saber de ti!",
 
-      "text":"<p class=\"paragraph-general\">Contáctanos para brindarte información de nuestros tours, resolver tus dudas y ayudarte a tener unas vacaciones inolvidables en Cancún y la Riviera Maya.</p><p class=\"paragraph-general\">Síguenos en nuestras redes sociales y si ya realizaste un tour con nosotros, cuéntanos tu experiencia. ¡Nos encanta saber que tuviste una gran experiencia!</p><p class=\"paragraph-general\">Llámanos: 01(984)242-0070</p><p class=\"paragraph-general\">Sin costo USA/CAN: +1(888) 257-5547</p><p class=\"paragraph-general\">Email: websales@cancunbay.com</p>"
+      "text":"<p class=\"paragraph-general\">Contáctanos para brindarte información de nuestros tours, resolver tus dudas y ayudarte a tener unas vacaciones inolvidables en Cancún y la Riviera Maya.</p><p class=\"paragraph-general\">Síguenos en nuestras redes sociales y si ya realizaste un tour con nosotros, cuéntanos tu experiencia.¡Nos encanta saber que tuviste una gran experiencia!</p><p class=\"paragraph-general\">Email: websales@cancunbay.com</p>"
    },
 
 
